--- a/package.json
+++ b/package.json
@@ -17,18 +17,14 @@
   },
   "devDependencies": {
     "@types/three": "^0.164.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "gh-pages": "^6.1.1",
     "three": "^0.164.1",
-    "typescript": "~4.5.5",
     "vue-cli-plugin-tailwind": "^3.0.0"
   },
   "eslintConfig": {
@@ -38,8 +34,7 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "@vue/typescript/recommended"
+      "eslint:recommended"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
